# rhizome

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/: innocube_swap.gcode
src/: api.rs  config.rs  error.rs  main.rs  printer.rs
src/api/: middleware.rs  mod.rs  v1.rs
src/api/middleware/: gateway.rs
src/api/service/: mod.rs  print.rs
src/api/v1/: gcode.rs  mod.rs  peripherals.rs  print.rs  status.rs  ws.rs
src/printer/: mod.rs  status.rs  tls.rs
