[package]
name = "rhizome"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"

# http/ws
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio-tungstenite = "0.29.0"

# mqtt + tls
rumqttc = "0.25.1"
rustls = { version = "0.23.37", features = ["ring"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# configuration
toml = "1.0.7"
